[package]
name = "keybind-actions"
description = "Keybind Actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wincon"]}
user32-sys = "0.1.2"
serde_json = "1.0"
keycode = "0.4.0"
directories = "5.0"
tray-item = "0.9.0"
async-std = "1.12.0"

[build-dependencies]
embed-resource = "2.4.1"
winresource = "0.1.14"

[package.metadata.winresource]
ProductName = "Keybind Actions"
